--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "test": "jest --watch",
-    "test:ci": "jest --ci"
+    "test:ci": "jest --ci",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx . --fix",
+    "prettier": "npx prettier --write . --ignore-path .gitignore"
   },
   "dependencies": {
     "next": "^13.2.3",
@@ -21,6 +23,8 @@
     "@types/react": "^18.0.26",
     "@types/testing-library__jest-dom": "^5.14.5",
     "autoprefixer": "^10.4.13",
+    "eslint": "^8.36.0",
+    "eslint-config-next": "^13.2.4",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "postcss": "^8.4.21",
