--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
     "react-hooks/rules-of-hooks": "warn",
     "react/jsx-no-comment-textnodes": "off",
     "react/no-unescaped-entities": "off",
-    "no-else-return": "warn"
+    "no-else-return": "warn",
+    "react-hooks/exhaustive-deps": "off"
   }
 }
